--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,13 +1,13 @@
-<img src="{{data.imagen}}" alt="">
-<p>Nombre: {{data.nombre}}</p>
-<p>Apellido: {{data.apellido}}</p>
-<p>Email: {{data.email}}</p>
-<p>Celular:{{data.celular}}</p>
-<p>Ciudad: {{data.ciudad}}</p>
-<p>Pais: {{data.pais}}</p>
+<img src="{{datos.imagen}}" alt="">
+<p>Nombre: {{datos.nombre}}</p>
+<p>Apellido: {{datos.apellido}}</p>
+<p>Email: {{datos.email}}</p>
+<p>Celular:{{datos.celular}}</p>
+<p>Ciudad: {{datos.ciudad}}</p>
+<p>Pais: {{datos.pais}}</p>
 <h2>Experiencia Laboral</h2>
 <ul  >
-    <li  *ngFor="let experiencia of data.experienciaLab">
+    <li  *ngFor="let experiencia of datos.experienciaLab">
         <h3>{{experiencia.empresa}}</h3>
         <p>{{experiencia.periodo}}</p>
         <p>{{experiencia.tareasRealizada}}</p>
